Creacion de la plantilla del filtro de los productos

--- a/databios/templates/base.html
+++ b/databios/templates/base.html
@@ -18,7 +18,7 @@
                     <img src="{% static 'images/logo.png' %}" alt="Logo de la empresa">
                 </div>
                 <div class="logo">
-                    <a class="logol">@DataBios<span>.</span></a>
+                    <a class="logo">@DataBios<span>.</span></a>
                 </div>
                 <div class="search-container">
                     <div class="search">
