--- a/databios/templates/base.html
+++ b/databios/templates/base.html
@@ -24,9 +24,12 @@
     <link rel="stylesheet" href="{% static 'css/slicknav.min.css' %}" type="text/css">
     
     {% block extra_css %}{% endblock %}
+    
 
 </head>
 <body>
+    {% block contenido_eliminar %}
+
     <body>
          <!-- Page Preloder -->
     <div id="preloder">
@@ -63,6 +66,7 @@
                 <a href="#"><i class="fa fa-user"></i> Login</a>
             </div>
         </div>
+
         <nav class="humberger__menu__nav mobile-menu">
             <ul>
                 <li class="active"><a href="{% url 'Homeview' %}">Home</a></li>
@@ -78,7 +82,6 @@
                 <li><a href="{% url 'blog' %}">Blog</a></li>
                 <li><a href="{% url 'contacto' %}">Contact</a></li>
             </ul>
-            
         </nav>
         <div id="mobile-menu-wrap"></div>
         <div class="header__top__right__social">
@@ -138,24 +141,24 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="{% static 'imagenes/logo.png' %}" alt=""></a>
+                        <a href="{% url 'Homeview' %}"><img src="{% static 'imagenes/logo.png' %}" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <nav class="header__menu">
                         <ul>
-                            <li class="active"><a href="./index.html">Home</a></li>
-                            <li><a href="./shop-grid.html">Shop</a></li>
+                            <li class="active"><a href="{% url 'Homeview' %}">Home</a></li>
+                            <li><a href="{% url 'filtroproductos' %}">Shop</a></li>
                             <li><a href="#">Pages</a>
                                 <ul class="header__menu__dropdown">
-                                    <li><a href="./shop-details.html">Shop Details</a></li>
-                                    <li><a href="./shoping-cart.html">Shoping Cart</a></li>
-                                    <li><a href="./checkout.html">Check Out</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
+                                    <li><a href="{% url 'detalletienda' %}">Shop Details</a></li>
+                                    <li><a href="{% url 'carrito' %}">Shopping Cart</a></li>
+                                    <li><a href="{% url 'verificacion' %}">Check Out</a></li>
+                                    <li><a href="{% url 'detallesBlog' %}">Blog Details</a></li>
                                 </ul>
                             </li>
-                            <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
+                            <li><a href="{% url 'blog' %}">Blog</a></li>
+                            <li><a href="{% url 'contacto' %}">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -231,6 +234,8 @@
                             <a href="#" class="primary-btn">SHOP NOW</a>
                         </div>
                     </div>
+                    {% endblock %}
+
                 </div>
             </div>
         </div>
