--- a/databios/templates/catalogo.html
+++ b/databios/templates/catalogo.html
@@ -5,6 +5,9 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/catalogo.css' %}">
 {% endblock %}
 
+{% block contenido_eliminar %}
+{% endblock %}
+
 {% block content %}
 <div class="container">
     <aside class="sidebar">
