--- a/databios/templates/base.html
+++ b/databios/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Ogani Template">
