--- a/databios/templates/register.html
+++ b/databios/templates/register.html
@@ -4,11 +4,27 @@
     <title>Registro de cuenta</title>
 </head>
 <body>
-    <h1>Registro de cuenta</h1>
-    <form method="post">
+
+    <h1 class="titLoginRegister" align="center">REGISTRAR</h1>
+
+    <form action="/register/" method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Registrar">
+
+        <input type="text" name="first_name" placeholder="Ingresa tus nombres"><br>
+        <input type="text" name="last_name" placeholder="Ingresa Apellidos"><br>
+        <input type="text" name="username" placeholder="Tu usuario: "><br>
+        <input type="email" name="email" placeholder="Correo: "><br>
+        <input type="password" name="password1" placeholder="Contraseña"><br>
+        <input type="password" name="password2" placeholder="Vuelve a escribir la contraseña"><br>
+        <input type="Submit" value="Registrarme">
+
     </form>
+
+    <div>
+        {% for message in messages %}
+        <h3> {{message}}  </h3>
+        {% endfor %}
+    </div>
+
 </body>
 </html>
