--- a/databios/templates/base.html
+++ b/databios/templates/base.html
@@ -50,7 +50,7 @@
                 <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
                 <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
             </ul>
-            <div class="header__cart__price">item: <span>$150.00</span></div>
+            <div class="header__cart__price">Item: <span>$150.00</span></div>
         </div>
         <div class="humberger__menu__widget">
             <div class="header__top__right__language">
@@ -69,18 +69,18 @@
 
         <nav class="humberger__menu__nav mobile-menu">
             <ul>
-                <li class="active"><a href="{% url 'Homeview' %}">Home</a></li>
-                <li><a href="{% url 'filtroproductos' %}">Shop</a></li>
-                <li><a href="#">Pages</a>
+                <li class="active"><a href="{% url 'inicio' %}">Inicio</a></li>
+                <li><a href="{% url 'filtroproductos' %}">Comprar</a></li>
+                <li><a href="#">Paginas</a>
                     <ul class="header__menu__dropdown">
-                        <li><a href="{% url 'detalletienda' %}">Shop Details</a></li>
-                        <li><a href="{% url 'carrito' %}">Shopping Cart</a></li>
-                        <li><a href="{% url 'verificacion' %}">Check Out</a></li>
-                        <li><a href="{% url 'detallesBlog' %}">Blog Details</a></li>
+                        <li><a href="{% url 'detalletienda' %}">Detalles Tienda</a></li>
+                        <li><a href="{% url 'carrito' %}">Mi Carrito</a></li>
+                        <li><a href="{% url 'verificacion' %}">Verificacion</a></li>
+                        <li><a href="{% url 'detallesBlog' %}">Blog</a></li>
                     </ul>
                 </li>
                 <li><a href="{% url 'blog' %}">Blog</a></li>
-                <li><a href="{% url 'contacto' %}">Contact</a></li>
+                <li><a href="{% url 'contacto' %}">Contacto</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
@@ -92,8 +92,8 @@
         </div>
         <div class="humberger__menu__contact">
             <ul>
-                <li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
-                <li>Free Shipping for all Order of $99</li>
+                <li><i class="fa fa-envelope"></i> databios2023@gmail.com</li>
+                <li>Envío gratis para todos los pedidos mayores a S/100.00</li>
             </ul>
         </div>
     </div>
@@ -107,8 +107,8 @@
                     <div class="col-lg-6 col-md-6">
                         <div class="header__top__left">
                             <ul>
-                                <li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
-                                <li>Free Shipping for all Order of $99</li>
+                                <li><i class="fa fa-envelope"></i> databios2023@gmail.com</li>
+                                <li>Envío gratis para todos los pedidos > a S/100.00</li>
                             </ul>
                         </div>
                     </div>
@@ -141,24 +141,24 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="{% url 'Homeview' %}"><img src="{% static 'imagenes/logo.png' %}" alt=""></a>
+                        <a href="{% url 'inicio' %}"><img src="{% static 'imagenes/logo.png' %}" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <nav class="header__menu">
                         <ul>
-                            <li class="active"><a href="{% url 'Homeview' %}">Home</a></li>
-                            <li><a href="{% url 'filtroproductos' %}">Shop</a></li>
-                            <li><a href="#">Pages</a>
+                            <li class="active"><a href="{% url 'inicio' %}">Home</a></li>
+                            <li><a href="{% url 'filtroproductos' %}">Tienda</a></li>
+                            <li><a href="#">Paginas</a>
                                 <ul class="header__menu__dropdown">
-                                    <li><a href="{% url 'detalletienda' %}">Shop Details</a></li>
-                                    <li><a href="{% url 'carrito' %}">Shopping Cart</a></li>
-                                    <li><a href="{% url 'verificacion' %}">Check Out</a></li>
-                                    <li><a href="{% url 'detallesBlog' %}">Blog Details</a></li>
+                                    <li><a href="{% url 'detalletienda' %}">Detalles Tienda</a></li>
+                                    <li><a href="{% url 'carrito' %}">Mi Carrito</a></li>
+                                    <li><a href="{% url 'verificacion' %}">Verificacion</a></li>
+                                    <li><a href="{% url 'detallesBlog' %}">Blog</a></li>
                                 </ul>
                             </li>
                             <li><a href="{% url 'blog' %}">Blog</a></li>
-                            <li><a href="{% url 'contacto' %}">Contact</a></li>
+                            <li><a href="{% url 'contacto' %}">Contacto</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -168,7 +168,7 @@
                             <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
                             <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
                         </ul>
-                        <div class="header__cart__price">item: <span>$150.00</span></div>
+                        <div class="header__cart__price">Item: <span>$150.00</span></div>
                     </div>
                 </div>
             </div>
@@ -187,20 +187,17 @@
                     <div class="hero__categories">
                         <div class="hero__categories__all">
                             <i class="fa fa-bars"></i>
-                            <span>All departments</span>
+                            <span>CATEGORIAS</span>
                         </div>
                         <ul>
-                            <li><a href="#">Fresh Meat</a></li>
-                            <li><a href="#">Vegetables</a></li>
-                            <li><a href="#">Fruit & Nut Gifts</a></li>
-                            <li><a href="#">Fresh Berries</a></li>
-                            <li><a href="#">Ocean Foods</a></li>
-                            <li><a href="#">Butter & Eggs</a></li>
-                            <li><a href="#">Fastfood</a></li>
-                            <li><a href="#">Fresh Onion</a></li>
-                            <li><a href="#">Papayaya & Crisps</a></li>
-                            <li><a href="#">Oatmeal</a></li>
-                            <li><a href="#">Fresh Bananas</a></li>
+                            <li><a href="#">Utiles Escolares</a></li>
+                            <li><a href="#">Utiles de Oficina</a></li>
+                            <li><a href="#">Equipos Gamers</a></li>
+                            <li><a href="#">Regalos</a></li>
+                            <li><a href="#">Juguetes</a></li>
+                            <li><a href="#">Papeleria</a></li>
+                            <li><a href="#">Arte y Diseño</a></li>
+                            <li><a href="#">Cuidado personal y de limpieza</a></li>
                         </ul>
                     </div>
                 </div>
@@ -208,12 +205,8 @@
                     <div class="hero__search">
                         <div class="hero__search__form">
                             <form action="#">
-                                <div class="hero__search__categories">
-                                    All Categories
-                                    <span class="arrow_carrot-down"></span>
-                                </div>
-                                <input type="text" placeholder="What do yo u need?">
-                                <button type="submit" class="site-btn">SEARCH</button>
+                                <input type="text" placeholder="Que producto desea?">
+                                <button type="submit" class="site-btn">BUSCAR</button>
                             </form>
                         </div>
                         <div class="hero__search__phone">
@@ -221,17 +214,17 @@
                                 <i class="fa fa-phone"></i>
                             </div>
                             <div class="hero__search__phone__text">
-                                <h5>+65 11.188.888</h5>
-                                <span>support 24/7 time</span>
+                                <h5>+054 268096</h5>
+                                <span>| Atencion | 24/7 |</span>
                             </div>
                         </div>
                     </div>
                     <div class="hero__item set-bg" data-setbg="{% static 'imagenes/hero/banner.jpg' %}">
                         <div class="hero__text">
-                            <span>FRUIT FRESH</span>
-                            <h2>Vegetable <br />100% Organic</h2>
-                            <p>Free Pickup and Delivery Available</p>
-                            <a href="#" class="primary-btn">SHOP NOW</a>
+                            <span>Chala 2023</span>
+                            <h2> Libreria<br /> DATABIOS</h2>
+                            <p>Somos una empresa 100% peruana, proveedora de <br /> utiles de oficina, productos de limpieza, tecnologia, <br />y demas productos y servicios especializados para empresas.</p>
+                            <a href="#" class="primary-btn">COMPRAR AHORA</a>
                         </div>
                     </div>
                     {% endblock %}
@@ -300,19 +293,17 @@
                             <a href="#"><i class="fa fa-pinterest"></i></a>
                         </div>
                     </div>
+                    <div class="footer__copyright__payment"><img src="{% static 'imagenes/payment-item.png' %}" alt=""></div>
+
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="footer__copyright">
-                        <div class="footer__copyright__text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
-                        <div class="footer__copyright__payment"><img src="{% static 'imagenes/payment-item.png' %}" alt=""></div>
-                    </div>
-                </div>
+            <div align=center class="footer__copyright">
+                <div  class="footer__copyright__text"><p>
+    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Databios SRL <i class="fa fa-heart" aria-hidden="true"></i>  </a>
+    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
             </div>
         </div>
+        
     </footer>
     <!-- Footer Section End -->
 
