--- a/databios/templates/filtroproductos.html
+++ b/databios/templates/filtroproductos.html
@@ -12,6 +12,9 @@
 
 {% block content %}
 
+    <div id="preloder">
+        <div class="loader"></div>
+    </div>
     
     <!-- Humberger Begin -->
     <div class="humberger__menu__overlay"></div>
@@ -24,7 +27,7 @@
                 <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
                 <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
             </ul>
-            <div class="header__cart__price">item: <span>$150.00</span></div>
+            <div class="header__cart__price">Item: <span>$150.00</span></div>
         </div>
         <div class="humberger__menu__widget">
             <div class="header__top__right__language">
@@ -42,18 +45,18 @@
         </div>
         <nav class="humberger__menu__nav mobile-menu">
             <ul>
-                <li class="active"><a href="{% url 'Homeview' %}">Home</a></li>
-                <li><a href="{% url 'filtroproductos' %}">Shop</a></li>
-                <li><a href="#">Pages</a>
+                <li class="active"><a href="{% url 'inicio' %}">Home</a></li>
+                <li><a href="{% url 'filtroproductos' %}">Comprar</a></li>
+                <li><a href="#">Paginas</a>
                     <ul class="header__menu__dropdown">
-                        <li><a href="{% url 'detalletienda' %}">Shop Details</a></li>
-                        <li><a href="{% url 'carrito' %}">Shopping Cart</a></li>
-                        <li><a href="{% url 'verificacion' %}">Check Out</a></li>
-                        <li><a href="{% url 'detallesBlog' %}">Blog Details</a></li>
+                        <li><a href="{% url 'detalletienda' %}">Detalles Tienda</a></li>
+                        <li><a href="{% url 'carrito' %}">Mi Carrito</a></li>
+                        <li><a href="{% url 'verificacion' %}">Verificacion</a></li>
+                        <li><a href="{% url 'detallesBlog' %}">Blog</a></li>
                     </ul>
                 </li>
                 <li><a href="{% url 'blog' %}">Blog</a></li>
-                <li><a href="{% url 'contacto' %}">Contact</a></li>
+                <li><a href="{% url 'contacto' %}">Contacto</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
@@ -65,8 +68,8 @@
         </div>
         <div class="humberger__menu__contact">
             <ul>
-                <li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
-                <li>Free Shipping for all Order of $99</li>
+                <li><i class="fa fa-envelope"></i> databios2023@gmail.com</li>
+                <li>Envío gratis para todos los pedidos mayores a S/100.00</li>
             </ul>
         </div>
     </div>
@@ -80,8 +83,8 @@
                     <div class="col-lg-6">
                         <div class="header__top__left">
                             <ul>
-                                <li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
-                                <li>Free Shipping for all Order of $99</li>
+                                <li><i class="fa fa-envelope"></i> databios2023@gmail.com</li>
+                                <li>Envío gratis para todos los pedidos mayores a S/100.00</li>
                             </ul>
                         </div>
                     </div>
@@ -120,18 +123,18 @@
                 <div class="col-lg-6">
                     <nav class="header__menu">
                         <ul>
-                            <li><a href="{% url 'Homeview' %}">Home</a></li>
-                            <li><a href="{% url 'filtroproductos' %}">Shop</a></li>
-                            <li><a href="#">Pages</a>
+                            <li class="active"><a href="{% url 'inicio' %}">Home</a></li>
+                            <li><a href="{% url 'filtroproductos' %}">Tienda</a></li>
+                            <li><a href="#">Paginas</a>
                                 <ul class="header__menu__dropdown">
-                                    <li><a href="{% url 'detalletienda' %}">Shop Details</a></li>
-                                    <li><a href="{% url 'carrito' %}">Shopping Cart</a></li>
-                                    <li><a href="{% url 'verificacion' %}">Check Out</a></li>
-                                    <li><a href="{% url 'detallesBlog' %}">Blog Details</a></li>
+                                    <li><a href="{% url 'detalletienda' %}">Detalles Tienda</a></li>
+                                    <li><a href="{% url 'carrito' %}">Mi Carrito</a></li>
+                                    <li><a href="{% url 'verificacion' %}">Verificacion</a></li>
+                                    <li><a href="{% url 'detallesBlog' %}">Blog</a></li>
                                 </ul>
                             </li>
                             <li><a href="{% url 'blog' %}">Blog</a></li>
-                            <li><a href="{% url 'contacto' %}">Contact</a></li>
+                            <li><a href="{% url 'contacto' %}">Contacto</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -141,7 +144,7 @@
                             <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
                             <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
                         </ul>
-                        <div class="header__cart__price">item: <span>$150.00</span></div>
+                        <div class="header__cart__price">Item: <span>$150.00</span></div>
                     </div>
                 </div>
             </div>
@@ -160,20 +163,17 @@
                     <div class="hero__categories">
                         <div class="hero__categories__all">
                             <i class="fa fa-bars"></i>
-                            <span>All departments</span>
+                            <span>CATEGORIAS</span>
                         </div>
                         <ul>
-                            <li><a href="#">Fresh Meat</a></li>
-                            <li><a href="#">Vegetables</a></li>
-                            <li><a href="#">Fruit & Nut Gifts</a></li>
-                            <li><a href="#">Fresh Berries</a></li>
-                            <li><a href="#">Ocean Foods</a></li>
-                            <li><a href="#">Butter & Eggs</a></li>
-                            <li><a href="#">Fastfood</a></li>
-                            <li><a href="#">Fresh Onion</a></li>
-                            <li><a href="#">Papayaya & Crisps</a></li>
-                            <li><a href="#">Oatmeal</a></li>
-                            <li><a href="#">Fresh Bananas</a></li>
+                            <li><a href="#">Utiles Escolares</a></li>
+                            <li><a href="#">Utiles de Oficina</a></li>
+                            <li><a href="#">Equipos Gamers</a></li>
+                            <li><a href="#">Regalos</a></li>
+                            <li><a href="#">Juguetes</a></li>
+                            <li><a href="#">Papeleria</a></li>
+                            <li><a href="#">Arte y Diseño</a></li>
+                            <li><a href="#">Cuidado personal y de limpieza</a></li>
                         </ul>
                     </div>
                 </div>
@@ -181,12 +181,8 @@
                     <div class="hero__search">
                         <div class="hero__search__form">
                             <form action="#">
-                                <div class="hero__search__categories">
-                                    All Categories
-                                    <span class="arrow_carrot-down"></span>
-                                </div>
-                                <input type="text" placeholder="What do yo u need?">
-                                <button type="submit" class="site-btn">SEARCH</button>
+                                <input type="text" placeholder="Que producto desea?">
+                                <button type="submit" class="site-btn">BUSCAR</button>
                             </form>
                         </div>
                         <div class="hero__search__phone">
@@ -194,8 +190,8 @@
                                 <i class="fa fa-phone"></i>
                             </div>
                             <div class="hero__search__phone__text">
-                                <h5>+65 11.188.888</h5>
-                                <span>support 24/7 time</span>
+                                <h5>054 268096</h5>
+                                <span>| Atencion | 24/7 |</span>
                             </div>
                         </div>
                     </div>
@@ -211,10 +207,10 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb__text">
-                        <h2>Organi Shop</h2>
+                        <h2>SELECTOR DE PRODUCTOS</h2>
                         <div class="breadcrumb__option">
                             <a href="{% url 'Homeview' %}">Home</a>
-                            <span>Shop</span>
+                            <span>Tienda</span>
                         </div>
                     </div>
                 </div>
@@ -230,18 +226,16 @@
                 <div class="col-lg-3 col-md-5">
                     <div class="sidebar">
                         <div class="sidebar__item">
-                            <h4>Department</h4>
+                            <h4>Categorias</h4>
                             <ul>
-                                <li><a href="#">Fresh Meat</a></li>
-                                <li><a href="#">Vegetables</a></li>
-                                <li><a href="#">Fruit & Nut Gifts</a></li>
-                                <li><a href="#">Fresh Berries</a></li>
-                                <li><a href="#">Ocean Foods</a></li>
-                                <li><a href="#">Butter & Eggs</a></li>
-                                <li><a href="#">Fastfood</a></li>
-                                <li><a href="#">Fresh Onion</a></li>
-                                <li><a href="#">Papayaya & Crisps</a></li>
-                                <li><a href="#">Oatmeal</a></li>
+                                <li><a href="#">Utiles Escolares</a></li>
+                                <li><a href="#">Utiles de Oficina</a></li>
+                                <li><a href="#">Equipos Gamers</a></li>
+                                <li><a href="#">Regalos</a></li>
+                                <li><a href="#">Juguetes</a></li>
+                                <li><a href="#">Papeleria</a></li>
+                                <li><a href="#">Arte y Diseño</a></li>
+                                <li><a href="#">Cuidado personal y de limpieza</a></li>
                             </ul>
                         </div>                    
                     </div>
