--- a/databios/templates/base.html
+++ b/databios/templates/base.html
@@ -79,7 +79,7 @@
                         <li><a href="{% url 'detallesBlog' %}">Blog</a></li>
                     </ul>
                 </li>
-                <li><a href="{% url 'blog' %}">Blog</a></li>
+                <li><a href="{% url 'productos' %}">Blog</a></li>
                 <li><a href="{% url 'contacto' %}">Contacto</a></li>
             </ul>
         </nav>
@@ -157,7 +157,7 @@
                                     <li><a href="{% url 'detallesBlog' %}">Blog</a></li>
                                 </ul>
                             </li>
-                            <li><a href="{% url 'blog' %}">Blog</a></li>
+                            <li><a href="{% url 'productos' %}">Blog</a></li>
                             <li><a href="{% url 'contacto' %}">Contacto</a></li>
                         </ul>
                     </nav>
