Operaciones CRUD para superusuarios

--- a/databios/templates/base.html
+++ b/databios/templates/base.html
@@ -143,21 +143,16 @@
                                     <li><a href="{% url 'carrito' %}">Mi Carrito</a></li>
                                     <li><a href="{% url 'verificacion' %}">Verificacion</a></li>
                                     <li><a href="{% url 'detallesBlog' %}">Blog</a></li>
+                                    
                                 </ul>
                             </li>
-                            <li><a href="{% url 'blog' %}">Blog</a></li>
-                            <li><a href="{% url 'contacto' %}">Contacto</a></li>
+                            {% if user.is_superuser %}
+                                    <a href="http://127.0.0.1:8000/product/create/" class="login-button">CREAR</a>
+                                    <a href="http://127.0.0.1:8000/product/list/" class="login-button">ACTUALIZAR</a>
+                                    <a href="http://127.0.0.1:8000/product/delete/list/" class="login-button">ELIMINAR</a>
+                                    {% endif %}
                         </ul>
                     </nav>
-                </div>
-                <div class="col-lg-3">
-                    <div class="header__cart">
-                        <ul>
-                            <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
-                            <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
-                        </ul>
-                        <div class="header__cart__price">Item: <span>$150.00</span></div>
-                    </div>
                 </div>
             </div>
             <div class="humberger__open">
