Filtros de categoria, usuarios y desplazamiento en paginas funcionales

--- a/databios/templates/base.html
+++ b/databios/templates/base.html
@@ -135,7 +135,7 @@
                     <nav class="header__menu">
                         <ul>
                             <li class="active"><a href="http://127.0.0.1:8000/">Home</a></li>
-                            <li><a href="{% url 'filtroproductos' %}">Tienda</a></li>
+                            <li><a href="http://127.0.0.1:8000/catalogo/">Tienda</a></li>
                             <li><a href="#">Paginas</a>
                                 <ul class="header__menu__dropdown">
                                     <li><a href="{% url 'detalletienda' %}">Detalles Tienda</a></li>
@@ -200,7 +200,7 @@
                             <span>Chala 2023</span>
                             <h2> Libreria<br /> DATABIOS</h2>
                             <p><strong>Somos una empresa 100% peruana, proveedora de <br /> utiles de oficina, productos de limpieza, tecnologia, <br />y demas productos y servicios especializados para empresas.</strong></p>
-                            <a href="#" class="primary-btn">COMPRAR AHORA</a>
+                            <a href="http://127.0.0.1:8000/register/catalogo" class="primary-btn">COMPRAR AHORA</a>
                         </div>
                     </div>
                     {% endblock %}
