--- a/databios/templates/product_confirm_delete.html
+++ b/databios/templates/product_confirm_delete.html
@@ -1,8 +1,23 @@
-<!-- product_confirm_delete.html -->
-<h2>Confirmar eliminación</h2>
-<p>¿Estás seguro de que deseas eliminar el producto "{{ object.nombre }}"?</p>
 
-<form method="post">
-  {% csrf_token %}
-  <input type="submit" value="Eliminar">
+{% load static %}
+<!-- product_form.html -->
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Formulario de Producto</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/product_confirm_delete.css' %}">
+</head>
+<body>
+    <!-- product_confirm_delete.html -->
+    <h2>Confirmar eliminación</h2>
+    <p>¿Estás seguro de que deseas eliminar el producto "{{ object.nombre }}"?</p>
+
+    <form method="post">
+      {% csrf_token %}
+      <input type="submit" value="Eliminar">
+    </form>
+
 </form>
+</body>
+</html>
