--- a/databios/templates/index.html
+++ b/databios/templates/index.html
@@ -86,7 +86,7 @@
                                 <li><i class="fa fa-comment-o"></i> 0 </li>
                             </ul>
                             <h5><a href="#">Ubicados en:</a></h5>
-                            <p>chala, Puerto Chala, Peru </p>
+                            <p> Chala, Puerto Chala, Peru </p>
                         </div>
                     </div>
                 </div>
