--- a/databios/templates/product_list.html
+++ b/databios/templates/product_list.html
@@ -4,6 +4,6 @@
     {% for product in products %}
       <li><a href="{% url 'product_edit' product.pk %}">{{ product.nombre }}</a></li>
     {% endfor %}
-    <a href="http://127.0.0.1:8000/">Inicio</a>
+    <a href="/">Inicio</a>
 
 </ul>
