--- a/databios/templates/product_delete_list.html
+++ b/databios/templates/product_delete_list.html
@@ -7,6 +7,6 @@
         <a href="{% url 'product_delete' product.pk %}">Eliminar</a>
       </li>
     {% endfor %}
-    <a href="http://127.0.0.1:8000/">Inicio</a>
+    <a href="/">Inicio</a>
   </ul>
   
