--- a/databios/templates/product_list.html
+++ b/databios/templates/product_list.html
@@ -1,9 +1,22 @@
-<!-- product_list.html -->
-<h1>ELIGE EL PRODUCTO A EDITAR</h1>
-<ul>
-    {% for product in products %}
-      <li><a href="{% url 'product_edit' product.pk %}">{{ product.nombre }}</a></li>
-    {% endfor %}
-    <a href="/">Inicio</a>
+{% load static %}
+<!-- product_form.html -->
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Formulario de Producto</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/product_list.css' %}">
+</head>
+<body>
+        <!-- product_list.html -->
+    <h1>ELIGE EL PRODUCTO A EDITAR</h1>
+    <ul>
+        {% for product in products %}
+          <li><a href="{% url 'product_edit' product.pk %}">{{ product.nombre }}</a></li>
+        {% endfor %}
+        <a href="http://127.0.0.1:8000/">Inicio</a>
 
-</ul>
+    </ul>
+</form>
+</body>
+</html>
