--- a/databios/templates/detalleProduct.html
+++ b/databios/templates/detalleProduct.html
@@ -15,5 +15,6 @@
         {% endfor %}
     </ul>
     <img src="{{ product.imagen.url }}" alt="Imagen del Producto" width="200">
+    <a href="/catalogo">Volver atras</a>
 </body>
 </html>
