--- a/databios/templates/detalleProduct.html
+++ b/databios/templates/detalleProduct.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Detalle del Producto</title>
-</head>
+    <head>
+        <title>Detalle del Producto</title>
+        <link rel="stylesheet" type="text/css" href="{% static 'css/detalle_producto.css' %}">
+    </head>
 <body>
     <h1>{{ product.nombre }}</h1>
     <p><strong>Descripción:</strong> {{ product.descripcion }}</p>
